--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -27,7 +25,7 @@ a:hover {
 }
 
 body {
- 
+  background: linear-gradient(to bottom, #7105FF, #000000);
 }
 
 h1 {
